tests/transpiler/x/rb/group_items_iteration.error
tests/vm/valid/group_items_iteration.mochi.rb:2: warning: already initialized constant Data
tests/vm/valid/group_items_iteration.mochi.rb:23:in `+': nil can't be coerced into Integer (TypeError)

    total = total + x["val"]
                    ^^^^^^^^
	from tests/vm/valid/group_items_iteration.mochi.rb:23:in `block (2 levels) in <main>'
	from tests/vm/valid/group_items_iteration.mochi.rb:22:in `each'
	from tests/vm/valid/group_items_iteration.mochi.rb:22:in `block in <main>'
	from tests/vm/valid/group_items_iteration.mochi.rb:20:in `each'
	from tests/vm/valid/group_items_iteration.mochi.rb:20:in `<main>'

panic: exit status 1

goroutine 1 [running]:
main.main()
	/tmp/run_transpile.go:29 +0x5fd
exit status 2
