tests/transpiler/x/rb/group_items_iteration.rb
# Generated by Mochi transpiler v0.10.34 on 2025-07-22 05:10 +0700
Data = Struct.new(:tag, :val, keyword_init: true)
data = [Data.new(tag: "a", val: 1), Data.new(tag: "a", val: 2), Data.new(tag: "b", val: 3)]
groups = data.group_by { |d| d["tag"] }.map { |k, items| { "key" => k, "items" => items } }
tmp = []
groups.each do |g|
  total = 0
  g["items"].each do |x|
    total = total + x["val"]
  end
  tmp = tmp + [{"tag" => g["key"], "total" => total}]
end
result = (begin
  _res = []
  tmp.each do |r|
    _res << r
  end
  _res = _res.each_with_index.sort_by do |r, __i|
    [r["tag"], __i]
  end.map{ |x, _| x }
_res
end)
puts(("[" + (result).map{ |x| if x.is_a?(String) then '\'' + x + '\'' elsif x.respond_to?(:to_h) then '{' + x.to_h.map{ |k,v| "'#{k}': #{v.is_a?(String) ? '\'' + v + '\'' : v.to_s}" }.join(', ') + '}' else x.to_s end }.join(', ') + "]"))
